<resources>
    <string name="app_name">Inseminator</string>
    <string name="menu_home">Home</string>
    <string name="menu_notif">Notifikasi</string>
    <string name="menu_profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_name">Yadi Nugraha</string>
    <string name="text_note">Ayo Lakukan Inseminasi Pada\nHewan Ternal</string>
    <string name="text_ternak">Ternak</string>
    <string name="text_pengajuan">Pengajuan</string>
    <string name="text_tglternak">yyyy-mm-dd</string>
    <string name="text_kandang">Pilih Kandang</string>
    <string name="text_detailternak">Detail Ternak</string>
    <string name="text_nama">Nama</string>
    <string name="text_namaternak">Nama Ternak</string>
    <string name="text_tgl">Tanggal Lahir</string>
    <string name="text_tanggal">yyyy/mm/dd</string>
    <string name="text_jenis">Jenis</string>
    <string name="text_jenissapi">Sapi Wagyu</string>
    <string name="text_bb">Berat Badan</string>
    <string name="text_kg">xxx Kg</string>
    <string name="text_jk">Jenis Kelamin</string>
    <string name="text_kelamin">Jantan</string>
    <string name="text_induk">Id Induk</string>
    <string name="text_xxx">xxxxxxxxxxxx</string>
    <string name="text_tambah">Tambah</string>
    <string name="text_hapus">Hapus</string>
    <string name="text_history">Riwayat Inseminasi</string>
    <string name="text_namaIB">Nama Inseminator</string>
    <string name="text_id_sapi">ID Sapi</string>
    <string name="text_detailriwayat">Detail Riwayat</string>
    <string name="text_idib">Id Inseminasi</string>
    <string name="text_jenissemen">Jenis Semen</string>
    <string name="text_waktuib">Waktu Inseminasi</string>
    <string name="text_infobunting">Infromasi Bunting</string>
    <string name="text_belum">Belum Bunting</string>
    <string name="text_mengajukanib">Mengajukan Inseminasi</string>
    <string name="text_login">Login</string>
    <string name="text_email">E-Mail</string>
    <string name="text_nohp">No Handphone</string>
    <string name="text_pass">Password</string>
    <string name="text_register">Registrasi</string>
    <string name="text_edit">Edit</string>
    <string name="text_noteib">Selamat datang di aplikasi\nInseminator</string>
    <string name="text_detailpengajuan">Detail Pengajuan</string>
    <string name="text_waktubirahi">Waktu Birahi</string>
    <string name="text_status">Status Melahirkan</string>
    <string name="text_konfirmasi">Konfirmasi Inseminasi</string>
    <string name="text_tanggalbirahi">Tanggal Birahi</string>
    <string name="text_notifikasi">Notifikasi</string>
    <string name="text_tglbirahi">Tanggal Birahi</string>
    <string name="text_tglib">Tanggal Inseminasi</string>
    <string name="text_konfbunting">Konfirmasi Bunting</string>
    <string name="text_tglpkb">Tanggal Bunting</string>
    <string name="text_infoib">Informasi Inseminasi</string>
    <string name="text_Profile">Profile</string>
    <string name="text_nik">Nik</string>
    <string name="text_pend">Pendidikan</string>
    <string name="text_alamat">Alamat</string>
    <string name="text_prov">Provinsi</string>
    <string name="text_daerah">Kabupaten</string>
    <string name="text_regexncy">Kabupaten</string>
    <string name="text_kec">Kecamatan</string>
    <string name="text_desa">Desa</string>
    <string name="text_logout">Logout</string>
    <string name="text_MI">Inseminasi Management</string>
    <string name="text_EditProfile">Edit Profile</string>
    <string name="text_berternak">Lama Berternak</string>
    <string name="text_save">Simpan</string>
    <string name="text_kab">Kabupaten</string>
    <string name="text_Edit">Edit</string>
    <string name="text_editpass">Edit Password</string>
    <string name="text_konflahir">Konfirmasi Lahir</string>
    <string name="text_inseminator">Inseminator</string>
    <string name="text_peternak">Nama Peternak</string>
</resources>