<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pengajuan.DetailPengajuanActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:src="@drawable/pengajuan_icon" />

            <TextView
                style="@style/poppins_semibold_style2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_7sdp"
                android:gravity="center_vertical"
                android:text="@string/text_detailpengajuan"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_header">

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_peternak"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">
            <TextView
                android:id="@+id/tv_peternak"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:text="@string/text_xxx" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_id_sapi"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">
            <TextView
                android:id="@+id/tv_noregis"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:text="@string/text_xxx" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_jenissemen"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

        <TextView
            android:id="@+id/tv_jenis_semen"
            style="@style/poppins_regular_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_gravity="center"
            android:text="@string/text_jenissapi" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_tglbirahi"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

            <TextView
                android:id="@+id/tv_tgl_birahi"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/text_tanggal" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_waktubirahi"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

            <TextView
                android:id="@+id/tv_jam_birahi"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/_5sdp"
                android:text="@string/text_tanggal" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_tglib"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

        <TextView
            android:id="@+id/tv_tgl_ib"
            style="@style/poppins_regular_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/text_tanggal" />
        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_infobunting"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

            <TextView
                android:id="@+id/tv_bunting"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:text="@string/text_belum" />

        </androidx.cardview.widget.CardView>

        <TextView
            style="@style/poppins_semibold_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/text_status"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_30sdp"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardBackgroundColor="@color/shadow">

            <TextView
                android:id="@+id/tv_lahir"
                style="@style/poppins_regular_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_gravity="center"
                android:text="@string/text_status" />

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btn_konfirmasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/text_konfirmasi"
            style="@style/poppins_semibold_style"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>